--- a/docs/開発環境セットアップ.md
+++ b/docs/開発環境セットアップ.md
@@ -2,28 +2,28 @@
 
 必要なもの: Docker
 
-起動手順：
+## 起動手順：
 
-1. GitHub からローカルにプロジェクトをクローンする
+### ① GitHub からローカルにプロジェクトをクローンする
 
-- git clone <git@github.com>:moriT958/todo-app.git
+- `git clone <git@github.com>:moriT958/todo-app.git`
 
-2. VSCode でプロジェクトを開く
+### ② VSCode でプロジェクトを開く
 
-- cd todo-app
-- code .
+- `cd todo-app`
+- `code .`
 
-3. 開発コンテナに入る
+### ③ 開発コンテナに入る
 
 - VSCode を開くと「コンテナで開く」みたいなメッセージが出るのでクリック
 - しばらく待つとコンテナに入れる(はず)
 
-4. 環境変数の設定
+### ④ 環境変数の設定
 
 - プロジェクト内に `.env` ファイルを作る
 - `.env.example` を参考に環境変数を記述する
 
-4. コンテナ内のターミナルでアプリを起動
+### ⑤ コンテナ内のターミナルでアプリを起動
 
-- フロントエンド: npm run dev
-- バックエンド: make dev
+- フロントエンド: `npm run dev`
+- バックエンド: `make dev`
